--- a/Lecture-1/index.html
+++ b/Lecture-1/index.html
@@ -11,6 +11,7 @@
   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi, praesentium! Velit, sapiente? Blanditiis dicta
     obcaecati maxime quisquam odit ullam aliquid, aspernatur, magni laborum, architecto odio cum earum excepturi
     molestiae libero!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam laudantium exercitationem cum consequatur ab, voluptatibus nobis nihil quo labore in odio vitae non tempore? Recusandae nam optio sit ipsam illo!</p>
 
 </body>
 
