--- a/Lecture-1/index.html
+++ b/Lecture-1/index.html
@@ -5,13 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi, praesentium! Velit, sapiente? Blanditiis dicta
     obcaecati maxime quisquam odit ullam aliquid, aspernatur, magni laborum, architecto odio cum earum excepturi
     molestiae libero!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam laudantium exercitationem cum consequatur ab, voluptatibus nobis nihil quo labore in odio vitae non tempore? Recusandae nam optio sit ipsam illo!</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam laudantium exercitationem cum consequatur ab,
+    voluptatibus nobis nihil quo labore in odio vitae non tempore? Recusandae nam optio sit ipsam illo!</p>
 
 </body>
 
